crates/aranya-policy-lang/tests/data/error_line_number_in_chunks/two_chunk_custom_error_with_patch.snap
---
source: crates/aranya-policy-lang/tests/tests.rs
expression: err
---
error: Invalid operator
   |
15 |         return x + y
   |                  ^ found `+`
   |
help: you should use an arithmetic function
   |
15 -         return x + y
15 +         return saturating_add(x, y)
   |
15 -         return x + y
15 +         return check_unwrap add(x, y)
   |
